--- a/notebook/basics.ipynb
+++ b/notebook/basics.ipynb
@@ -585,15 +585,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rosalind_6404 CCTGCGGAAGATCGGCACTAGAATAGCCAGAACCGTTTCTCTGAGGCTTCCGGCCTTCCC\n",
-      "TCCCACTAATAATTCTGAGG\n",
-      "\n",
-      "Rosalind_5959 CCATCGGTAGCGCATCCTTAGTCCAATTAAGTCCCTATCCAGGCGCTCCGCCGAAGGTCT\n",
-      "ATATCCATTTGTCAGCAGACACGC\n",
-      "\n",
-      "Rosalind_0808 CCACCCTCGTGGTATGGCTAGGCATTCAGGAACCGGAGAACGCTTCAGACCAGCCCGGAC\n",
-      "TGGGAACCTGCGGGCAGTAGGTGGAAT\n",
-      "\n"
+      "Rosalind_6404 CCTGCGGAAGATCGGCACTAGAATAGCCAGAACCGTTTCTCTGAGGCTTCCGGCCTTCCCTCCCACTAATAATTCTGAGG\n",
+      "Rosalind_5959 CCATCGGTAGCGCATCCTTAGTCCAATTAAGTCCCTATCCAGGCGCTCCGCCGAAGGTCTATATCCATTTGTCAGCAGACACGC\n",
+      "Rosalind_0808 CCACCCTCGTGGTATGGCTAGGCATTCAGGAACCGGAGAACGCTTCAGACCAGCCCGGACTGGGAACCTGCGGGCAGTAGGTGGAAT\n"
      ]
     }
    ],
@@ -603,6 +597,8 @@
     "\n",
     "with open(\"../data/gc.fa\") as fasta_file:\n",
     "    for line in fasta_file:\n",
+    "        # strip newline\n",
+    "        line = line.rstrip(\"\\n\")\n",
     "        # use () to capture a pattern\n",
     "        my_match = re.search(\"^>(.*)\", line)\n",
     "        # check if there was a match for a starting caret\n",
