--- a/notebook/functions.ipynb
+++ b/notebook/functions.ipynb
@@ -37,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `def` to define your own functions."
+    "Use `def` to define your own functions; the syntax is `def function_name(arguments):`. Default values for arguments are set when listing arguments. Documentation for a function can be included using a [docstring](https://peps.python.org/pep-0257/) and will be displayed using `help()`."
    ]
   },
   {
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Documentation for a function can be included using a [docstring](https://peps.python.org/pep-0257/) and will be displayed using `help()`."
+    "Get help on `my_function()`."
    ]
   },
   {
