--- a/notebook/exceptions.ipynb
+++ b/notebook/exceptions.ipynb
@@ -293,6 +293,52 @@
    "source": [
     "In summary, Python exceptions are a high-level control flow device. Exceptions can be raised by Python or via using `raise`. Exceptions are caught using `try` statements, which come in two logical formats (that can be mixed as of Python 2.5). Finally, we can also define our own exception class by inheriting from the `Exception` class."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea6658a-01ef-4a2a-b8a2-64db08c0c4dd",
+   "metadata": {},
+   "source": [
+    "### Try\n",
+    "\n",
+    "`try` is a compound and multipart statement that starts with a `try` header followed by a block of indented statements and then by one or more except clauses that identify exceptions to be caught and the respective blocks to process them. An `else` clause and block can be included at the end and will execute if no exception was raised during the `try` block.\n",
+    "\n",
+    "The block under the `try` header represents the _main action_ of the statement, i.e. the code you are trying to run and wrap in error processing logic. The `except` clauses define _handlers_ for exceptions raised during the `try` block and the `else` clause provides a handler to be run if **no exceptions** occur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ef9ad6ee-d6a8-4853-b88d-288207219a83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No exceptions were raised\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    True\n",
+    "except IndexError:\n",
+    "    pass\n",
+    "# all other exceptions\n",
+    "except:\n",
+    "    pass\n",
+    "else:\n",
+    "    print(\"No exceptions were raised\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c00362bd-f433-4231-a55d-38ef68f017be",
+   "metadata": {},
+   "source": [
+    "Note that the `except` clauses are _focused_ exception handlers and they catch exceptions that occur only within the statements in the associated `try` block. However, as the `try` block's statements can call functions coded elsewhere in a program, the source of an exception may be outside the `try` statement."
+   ]
   }
  ],
  "metadata": {
