--- a/notebook/pubmed.ipynb
+++ b/notebook/pubmed.ipynb
@@ -20,43 +20,110 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: metapub in /opt/conda/lib/python3.10/site-packages (0.5.5)\n",
-      "Requirement already satisfied: unidecode in /opt/conda/lib/python3.10/site-packages (from metapub) (1.3.6)\n",
-      "Requirement already satisfied: coloredlogs in /opt/conda/lib/python3.10/site-packages (from metapub) (15.0.1)\n",
-      "Requirement already satisfied: eutils in /opt/conda/lib/python3.10/site-packages (from metapub) (0.6.0)\n",
-      "Requirement already satisfied: lxml in /opt/conda/lib/python3.10/site-packages (from metapub) (4.9.2)\n",
-      "Requirement already satisfied: tabulate in /opt/conda/lib/python3.10/site-packages (from metapub) (0.9.0)\n",
-      "Requirement already satisfied: six in /opt/conda/lib/python3.10/site-packages (from metapub) (1.16.0)\n",
-      "Requirement already satisfied: python-Levenshtein in /opt/conda/lib/python3.10/site-packages (from metapub) (0.21.0)\n",
-      "Requirement already satisfied: pytest in /opt/conda/lib/python3.10/site-packages (from metapub) (7.3.1)\n",
-      "Requirement already satisfied: cssselect in /opt/conda/lib/python3.10/site-packages (from metapub) (1.2.0)\n",
-      "Requirement already satisfied: requests in /opt/conda/lib/python3.10/site-packages (from metapub) (2.28.1)\n",
-      "Requirement already satisfied: tox in /opt/conda/lib/python3.10/site-packages (from metapub) (4.5.1)\n",
-      "Requirement already satisfied: habanero in /opt/conda/lib/python3.10/site-packages (from metapub) (1.2.3)\n",
-      "Requirement already satisfied: docopt in /opt/conda/lib/python3.10/site-packages (from metapub) (0.6.2)\n",
-      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from metapub) (63.2.0)\n",
-      "Requirement already satisfied: humanfriendly>=9.1 in /opt/conda/lib/python3.10/site-packages (from coloredlogs->metapub) (10.0)\n",
-      "Requirement already satisfied: pytz in /opt/conda/lib/python3.10/site-packages (from eutils->metapub) (2022.1)\n",
+      "Collecting metapub\n",
+      "  Downloading metapub-0.5.5.tar.gz (120 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m120.3/120.3 kB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: setuptools in /opt/conda/lib/python3.10/site-packages (from metapub) (63.2.0)\n",
+      "Collecting lxml\n",
+      "  Downloading lxml-4.9.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.manylinux_2_24_x86_64.whl (7.1 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.1/7.1 MB\u001b[0m \u001b[31m22.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: requests in /opt/conda/lib/python3.10/site-packages (from metapub) (2.28.1)\n",
+      "Collecting eutils\n",
+      "  Downloading eutils-0.6.0-py2.py3-none-any.whl (41 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.9/41.9 kB\u001b[0m \u001b[31m9.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting habanero\n",
+      "  Downloading habanero-1.2.3-py2.py3-none-any.whl (30 kB)\n",
+      "Collecting tabulate\n",
+      "  Downloading tabulate-0.9.0-py3-none-any.whl (35 kB)\n",
+      "Collecting cssselect\n",
+      "  Downloading cssselect-1.2.0-py2.py3-none-any.whl (18 kB)\n",
+      "Collecting unidecode\n",
+      "  Downloading Unidecode-1.3.6-py3-none-any.whl (235 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m235.9/235.9 kB\u001b[0m \u001b[31m18.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting docopt\n",
+      "  Downloading docopt-0.6.2.tar.gz (25 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: six in /opt/conda/lib/python3.10/site-packages (from metapub) (1.16.0)\n",
+      "Collecting tox\n",
+      "  Downloading tox-4.5.1-py3-none-any.whl (148 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m149.0/149.0 kB\u001b[0m \u001b[31m31.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting pytest\n",
+      "  Downloading pytest-7.3.1-py3-none-any.whl (320 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m320.5/320.5 kB\u001b[0m \u001b[31m23.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting coloredlogs\n",
+      "  Downloading coloredlogs-15.0.1-py2.py3-none-any.whl (46 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m46.0/46.0 kB\u001b[0m \u001b[31m22.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting python-Levenshtein\n",
+      "  Downloading python_Levenshtein-0.21.0-py3-none-any.whl (9.4 kB)\n",
+      "Collecting humanfriendly>=9.1\n",
+      "  Downloading humanfriendly-10.0-py2.py3-none-any.whl (86 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.8/86.8 kB\u001b[0m \u001b[31m18.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: pytz in /opt/conda/lib/python3.10/site-packages (from eutils->metapub) (2022.1)\n",
       "Requirement already satisfied: tqdm in /opt/conda/lib/python3.10/site-packages (from habanero->metapub) (4.64.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (2022.6.15)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (1.26.11)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (1.26.11)\n",
       "Requirement already satisfied: charset-normalizer<3,>=2 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (2.1.0)\n",
-      "Requirement already satisfied: pluggy<2.0,>=0.12 in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (1.0.0)\n",
-      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (23.1)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.0rc8 in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (1.1.1)\n",
-      "Requirement already satisfied: iniconfig in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (2.0.0)\n",
-      "Requirement already satisfied: tomli>=1.0.0 in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (2.0.1)\n",
-      "Requirement already satisfied: Levenshtein==0.21.0 in /opt/conda/lib/python3.10/site-packages (from python-Levenshtein->metapub) (0.21.0)\n",
-      "Requirement already satisfied: rapidfuzz<4.0.0,>=2.3.0 in /opt/conda/lib/python3.10/site-packages (from Levenshtein==0.21.0->python-Levenshtein->metapub) (3.0.0)\n",
-      "Requirement already satisfied: colorama>=0.4.6 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (0.4.6)\n",
-      "Requirement already satisfied: chardet>=5.1 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (5.1.0)\n",
-      "Requirement already satisfied: filelock>=3.11 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (3.12.0)\n",
-      "Requirement already satisfied: cachetools>=5.3 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (5.3.0)\n",
-      "Requirement already satisfied: platformdirs>=3.2 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (3.5.1)\n",
-      "Requirement already satisfied: virtualenv>=20.21 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (20.23.0)\n",
-      "Requirement already satisfied: pyproject-api>=1.5.1 in /opt/conda/lib/python3.10/site-packages (from tox->metapub) (1.5.1)\n",
-      "Requirement already satisfied: distlib<1,>=0.3.6 in /opt/conda/lib/python3.10/site-packages (from virtualenv>=20.21->tox->metapub) (0.3.6)\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.10/site-packages (from requests->metapub) (2022.6.15)\n",
+      "Collecting pluggy<2.0,>=0.12\n",
+      "  Downloading pluggy-1.0.0-py2.py3-none-any.whl (13 kB)\n",
+      "Collecting tomli>=1.0.0\n",
+      "  Downloading tomli-2.0.1-py3-none-any.whl (12 kB)\n",
+      "Requirement already satisfied: packaging in /opt/conda/lib/python3.10/site-packages (from pytest->metapub) (21.3)\n",
+      "Collecting exceptiongroup>=1.0.0rc8\n",
+      "  Downloading exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
+      "Collecting iniconfig\n",
+      "  Downloading iniconfig-2.0.0-py3-none-any.whl (5.9 kB)\n",
+      "Collecting Levenshtein==0.21.0\n",
+      "  Downloading Levenshtein-0.21.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (174 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m174.1/174.1 kB\u001b[0m \u001b[31m32.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting rapidfuzz<4.0.0,>=2.3.0\n",
+      "  Downloading rapidfuzz-3.0.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m19.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting pyproject-api>=1.5.1\n",
+      "  Downloading pyproject_api-1.5.1-py3-none-any.whl (12 kB)\n",
+      "Collecting colorama>=0.4.6\n",
+      "  Downloading colorama-0.4.6-py2.py3-none-any.whl (25 kB)\n",
+      "Collecting virtualenv>=20.21\n",
+      "  Downloading virtualenv-20.23.0-py3-none-any.whl (3.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.3/3.3 MB\u001b[0m \u001b[31m21.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting packaging\n",
+      "  Downloading packaging-23.1-py3-none-any.whl (48 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m48.9/48.9 kB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting cachetools>=5.3\n",
+      "  Downloading cachetools-5.3.0-py3-none-any.whl (9.3 kB)\n",
+      "Collecting filelock>=3.11\n",
+      "  Downloading filelock-3.12.0-py3-none-any.whl (10 kB)\n",
+      "Collecting chardet>=5.1\n",
+      "  Downloading chardet-5.1.0-py3-none-any.whl (199 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.1/199.1 kB\u001b[0m \u001b[31m19.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting platformdirs>=3.2\n",
+      "  Downloading platformdirs-3.5.1-py3-none-any.whl (15 kB)\n",
+      "Collecting distlib<1,>=0.3.6\n",
+      "  Downloading distlib-0.3.6-py2.py3-none-any.whl (468 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m468.5/468.5 kB\u001b[0m \u001b[31m22.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hBuilding wheels for collected packages: metapub, docopt\n",
+      "  Building wheel for metapub (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for metapub: filename=metapub-0.5.5-py3-none-any.whl size=135353 sha256=b29a9c8eea8efe246d274ae45aaf6b7d4849dd666b057159c671cb5a0522d678\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/14/2f/e7/b1df60d116db48f981dc3a8b320c9ba2d27d2526d5bad3579d\n",
+      "  Building wheel for docopt (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for docopt: filename=docopt-0.6.2-py2.py3-none-any.whl size=13706 sha256=fa5a5d2327547608ca6a32ac74473f7dcfa6650cc9498decb1799d518bbe1ed0\n",
+      "  Stored in directory: /home/jovyan/.cache/pip/wheels/fc/ab/d4/5da2067ac95b36618c629a5f93f809425700506f72c9732fac\n",
+      "Successfully built metapub docopt\n",
+      "Installing collected packages: docopt, distlib, unidecode, tomli, tabulate, rapidfuzz, pluggy, platformdirs, packaging, lxml, iniconfig, humanfriendly, filelock, exceptiongroup, cssselect, colorama, chardet, cachetools, virtualenv, pytest, pyproject-api, Levenshtein, habanero, eutils, coloredlogs, tox, python-Levenshtein, metapub\n",
+      "  Attempting uninstall: packaging\n",
+      "    Found existing installation: packaging 21.3\n",
+      "    Uninstalling packaging-21.3:\n",
+      "      Successfully uninstalled packaging-21.3\n",
+      "  Attempting uninstall: colorama\n",
+      "    Found existing installation: colorama 0.4.5\n",
+      "    Uninstalling colorama-0.4.5:\n",
+      "      Successfully uninstalled colorama-0.4.5\n",
+      "  Attempting uninstall: cachetools\n",
+      "    Found existing installation: cachetools 5.0.0\n",
+      "    Uninstalling cachetools-5.0.0:\n",
+      "      Successfully uninstalled cachetools-5.0.0\n",
+      "Successfully installed Levenshtein-0.21.0 cachetools-5.3.0 chardet-5.1.0 colorama-0.4.6 coloredlogs-15.0.1 cssselect-1.2.0 distlib-0.3.6 docopt-0.6.2 eutils-0.6.0 exceptiongroup-1.1.1 filelock-3.12.0 habanero-1.2.3 humanfriendly-10.0 iniconfig-2.0.0 lxml-4.9.2 metapub-0.5.5 packaging-23.1 platformdirs-3.5.1 pluggy-1.0.0 pyproject-api-1.5.1 pytest-7.3.1 python-Levenshtein-0.21.0 rapidfuzz-3.0.0 tabulate-0.9.0 tomli-2.0.1 tox-4.5.1 unidecode-1.3.6 virtualenv-20.23.0\n"
      ]
     }
    ],
@@ -80,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!export NCBI_API_KEY=\"b462c46b1bf5548e9d9d127e3c1b0121ba08\""
+    "!export NCBI_API_KEY=\"your_key\""
    ]
   },
   {
@@ -101,7 +168,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-18 02:40:55 b5d1332b8ba8 metapub.config[1248] WARNING NCBI_API_KEY was not set.\n"
+      "2023-05-18 02:47:15 52ff4a63f87b metapub.config[127] WARNING NCBI_API_KEY was not set.\n"
      ]
     },
     {
