--- a/notebook/reticulate.Rmd
+++ b/notebook/reticulate.Rmd
@@ -7,42 +7,62 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-The [reticulate](https://rstudio.github.io/reticulate/) package provides a comprehensive set of tools for interoperability between Python and R.
+The [reticulate](https://rstudio.github.io/reticulate/) package provides a comprehensive set of tools for interoperability between Python and R. The package includes facilities for:
 
-Install the package (if you haven't already).
+* Calling Python from R in a variety of ways including R Markdown, sourcing Python scripts, importing Python modules, and using Python interactively within an R session.
+* Translation between R and Python objects (for example, between R and Pandas data frames, or between R matrices and NumPy arrays).
+* Flexible binding to different versions of Python including virtual environments and Conda environments.
+
+Reticulate embeds a Python session within your R session, enabling seamless, high-performance interoperability. If you are an R developer that uses Python for some of your work or a member of data science team that uses both languages, reticulate can dramatically streamline your workflow!
+
+Try to load package, installing it if missing.
 
 ```{r install}
 if(!require("reticulate")){
   install.packages("reticulate")
+  require(reticulate)
 }
+```
+
+Use Miniconda3.
+
+```{r install_miniconda}
+if (!dir.exists(miniconda_path())){
+  reticulate::install_miniconda()
+}
+use_python(paste0(miniconda_path(), '/bin/python3'))
 ```
 
 Python interpreter in PATH.
 
-```{r which_python_before}
+```{r which_python}
 Sys.which("python")
 ```
 
-Use the Conda Python (`required = TRUE` is necessary to force the change) and print out config.
+Package Installer for Python.
 
-```{r use_python}
-use_python(python = "/Users/dtang/miniconda3/bin/python", required = TRUE)
+```{r which_pip}
+Sys.which("pip")
+```
+
+Install `numpy`.
+
+```{bash}
+pip install numpy
+```
+
+Print out config.
+
+```{r py_config}
 py_config()
 ```
 
-Python interpreter after using `use_python`.
-
-```{r which_python_after}
-Sys.which("python")
-```
-Import the Python module `sys` and get Python version.
+Run some Python code: import the Python module `sys` and get Python version.
 
 ```{python}
 import sys
 print(sys.version)
 ```
-
-To install `numpy`, run `pip install numpy` but make sure you are using the Conda `pip`.
 
 Import `numpy`, create a `numpy` array, and print out `type`.
 
