--- a/notebook/keras_eg1.ipynb
+++ b/notebook/keras_eg1.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "answering-strap",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11493376/11490434 [==============================] - 0s 0us/step\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.datasets import mnist\n",
     "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()"
@@ -21,10 +30,42 @@
   },
   {
    "cell_type": "markdown",
+   "id": "mighty-maintenance",
+   "metadata": {},
+   "source": [
+    "The MNIST dataset is stored in four `NumPy` arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cardiovascular-refund",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(train_images))\n",
+    "print(type(train_labels))\n",
+    "print(type(test_images))\n",
+    "print(type(test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "functioning-henry",
    "metadata": {},
    "source": [
-    "Shape."
+    "Shape of training data."
    ]
   },
   {
@@ -50,6 +91,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "automated-platinum",
+   "metadata": {},
+   "source": [
+    "Slice of first training image."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "american-thermal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,   0,   0,   0,   0],\n",
+       "       [  0,   0,   0,   7, 135],\n",
+       "       [  0,   0,   7, 131, 252],\n",
+       "       [  0,  48, 165, 252, 173],\n",
+       "       [114, 238, 253, 162,   0]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_images[1, 15:20, 15:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "designed-identity",
    "metadata": {},
    "source": [
@@ -58,23 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "collaborative-cooperative",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([5, 0, 4, ..., 5, 6, 8], dtype=uint8)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 4 1 9 2]\n"
+     ]
     }
    ],
    "source": [
-    "train_labels"
+    "print(train_labels[1:6])"
    ]
   },
   {
